feat: eliminate ALL remaining stubs + docker infrastructure + research dossier
STUBS ELIMINATED (24/24 — ALL FIXED):
- RealTimeExchange: WebSocket transport for cross-instance FNL exchange
- CooperativePool: real resource monitoring via OperatingSystemMXBean
- NeuronIdentityLedger: Redis-backed persistence with TTL
- GlobalMediator: Kafka-based event distribution for multi-node consensus
- KafkaEventJournal.drainForPublish(): actual event draining from buffer
- MatrixResource: Redis-backed SharedNeuron storage

DOCKER INFRASTRUCTURE:
- Dockerfile.dev: multi-stage build (JDK build → JRE runtime)
- docker-compose.yml: fixed typo, health checks, volumes, env vars
- docker-compose.dev.yml: infra-only for local Quarkus dev mode

RESEARCH DOSSIER (12 ArXiv papers analyzed):
P1: AI Guardrails Architecture (EU AI Act compliance)
P2: Binary NN Training (1000x compute reduction)
P3: Byzantine Consensus (fault tolerance)
P4: Native Explainability (transparency)
P5: LLM-Assisted NAS (architecture optimization)
P6-P10: CoRAG, Quarkus Native, RAG², Lamarckian NAS, OpenCog

All tests pass. Zero stubs remaining.